--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <input type="email" id="email" placeholder="digite seu email" required>
         <label for="senha">senha</label>
         <input type="password" id="senha" placeholder="sua senha" required>
-        <button type="submit"> entrar</button>
+        <button type="submit" class="botao"> entrar</button>
         <p>não possui conta?</p>
         <a href="cadastro.html">cadastre-se</a>
     </form>
